Fixed a small aligning issue and added a hidden refresh function (for quickly restarting tests

--- a/frontend_beta/textbox.css
+++ b/frontend_beta/textbox.css
@@ -21,7 +21,7 @@
 	    font-size: 300%;
 	    width: 96%;
 	    border: 1px solid black;
-	    padding: 5px;
+	    /*padding: 5px;*/
 	    text-align: center;
 	}
 	
